--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.example.wangpeng.mykotlinapplication.ui.DetailActivity">
 
+    <FrameLayout
+        android:id="@+id/contentLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 </RelativeLayout>
