--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="contentframe" type="id">contentframe</item>
+    <item name="detail" type="id">detail</item>
 </resources>
